// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders PromptModal 1`] = `
<body
  style="overflow: hidden; padding-right: 0px;"
>
  <div
    aria-hidden="true"
  >
    <div
      class="Picasso-root"
    />
  </div>
  <div
    class="MuiDialog-root Modal-root"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container Modal-container MuiDialog-scrollPaper"
      role="document"
      style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation2 MuiDialog-paper Modal-paper Modal-small MuiDialog-paperScrollPaper MuiDialog-paperWidthFalse"
        role="dialog"
      >
        <div
          class="ModalTitle-root"
        >
          <h3
            class="MuiTypography-root Typography-headingMedium MuiTypography-h3"
          >
            Test title
          </h3>
        </div>
        <div
          class="ModalContent-root"
        >
          <p
            class="MuiTypography-root Typography-bodyMedium MuiTypography-body1"
          >
            Test message
          </p>
        </div>
        <div
          class="ModalActions-root"
        >
          <button
            class="MuiButtonBase-root Button-medium Button-flat Button-root"
            tabindex="0"
            type="button"
          >
            <span
              class="Container-flex Container-inline Button-content"
              style="align-items: center;"
            >
              Cancel
            </span>
          </button>
          <button
            class="MuiButtonBase-root Button-medium Button-primaryGreen Button-root"
            tabindex="0"
            type="button"
          >
            <span
              class="Container-flex Container-inline Button-content"
              style="align-items: center;"
            >
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`showPrompt opens and closes modal on Submit action 1`] = `
<body
  style=""
>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        class="MuiButtonBase-root Button-medium Button-primaryBlue Button-root"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-flex Container-inline Button-content"
          style="align-items: center;"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`showPrompt opens and closes modal on Submit action 2`] = `
<body
  style=""
>
  <div>
    <div
      class="Picasso-root"
      style="overflow: hidden;"
    >
      <button
        aria-hidden="true"
        class="MuiButtonBase-root Button-medium Button-primaryBlue Button-root"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-flex Container-inline Button-content"
          style="align-items: center;"
        >
          Show
        </span>
      </button>
      <div
        class="MuiDialog-root Modal-root"
        role="presentation"
        style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
      >
        <div
          aria-hidden="true"
          class="MuiBackdrop-root"
          style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        />
        <div
          data-test="sentinelStart"
          tabindex="0"
        />
        <div
          class="MuiDialog-container Modal-container MuiDialog-scrollPaper"
          role="document"
          style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          tabindex="-1"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation2 MuiDialog-paper Modal-paper Modal-small MuiDialog-paperScrollPaper MuiDialog-paperWidthFalse"
            role="dialog"
          >
            <div
              class="ModalTitle-root"
            >
              <h3
                class="MuiTypography-root Typography-headingMedium MuiTypography-h3"
              >
                Test title
              </h3>
            </div>
            <div
              class="ModalContent-root"
            >
              <p
                class="MuiTypography-root Typography-bodyMedium MuiTypography-body1"
              >
                Test message
              </p>
            </div>
            <div
              class="ModalActions-root"
            >
              <button
                class="MuiButtonBase-root Button-medium Button-flat Button-root"
                tabindex="0"
                type="button"
              >
                <span
                  class="Container-flex Container-inline Button-content"
                  style="align-items: center;"
                >
                  Cancel
                </span>
              </button>
              <button
                class="MuiButtonBase-root Button-medium Button-primaryGreen Button-root"
                tabindex="0"
                type="button"
              >
                <span
                  class="Container-flex Container-inline Button-content"
                  style="align-items: center;"
                >
                  Submit
                </span>
              </button>
            </div>
            <span>
              <svg
                class="SvgCloseMinor16-root Modal-closeButton"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.707 8l3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5z"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          data-test="sentinelEnd"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`showPrompt opens and closes modal on Submit action 3`] = `
<body
  style=""
>
  <div>
    <div
      class="Picasso-root"
      style=""
    >
      <button
        class="MuiButtonBase-root Button-medium Button-primaryBlue Button-root"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-flex Container-inline Button-content"
          style="align-items: center;"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`showPrompt with input returns result on Submit action  1`] = `
<body
  style=""
>
  <div>
    <div
      class="Picasso-root"
      style=""
    >
      <button
        class="MuiButtonBase-root Button-medium Button-primaryBlue Button-root"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-flex Container-inline Button-content"
          style="align-items: center;"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;
